kube-dashboard/standard-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: standard
spec:
  chain:
    middlewares:
    - name: compress
    - name: limited-body
    - name: max-connections
    - name: ratelimit
    - name: circuitbreaker    
    - name: security-response-header
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure
spec:
  chain:
    middlewares:
    #- name: http-redirect 
    - name: limited-body
    - name: max-connections
    - name: ratelimit
    - name: circuitbreaker    
    - name: security-response-header
    - name: more-security-response-header
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Enable gzip compression
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: compress
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: limited-body
spec:
  buffering:
    maxRequestBodyBytes: 2000000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: max-connections
spec:
  inFlightReq:
    amount: 400
---
# Here, an average of 100 requests per second is allowed.
# In addition, a burst of 50 requests is allowed.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    average: 60
    burst: 140
---
# Latency Check
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: circuitbreaker
spec:
  circuitBreaker:
    expression: LatencyAtQuantileMS(50.0) > 1500 || ResponseCodeRatio(500, 600, 0, 600) > 0.50
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-header
spec:
  headers:
    customResponseHeaders:
      cache-control: "private, max-age=0, no-cache, no-store, must-revalidate"
      pragma: "no-cache"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-response-header
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
    - "x-access-token"
    - "Authorization"
    - "DNT"
    - "User-Agent"
    - "X-Requested-With"
    - "If-Modified-Since"
    - "Cache-Control"
    - "Content-Type"
    - "Range"
    accessControlExposeHeaders:
    - "Content-Length"
    - "Content-Range"
    accessControlAllowOriginList: [ "*" ]
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: more-security-response-header
spec:
  headers:
    sslRedirect: true  
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    contentSecurityPolicy: "default-src 'self' data: gap: ws: wss:; style-src 'self' 'unsafe-inline'; object-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: *.fbcdn.net pbs.twimg.com media.licdn.com *.cdninstagram.com *.googleusercontent.com *.akamaihd.net;"
